--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,1 +1,2 @@
-@import "./variables", "./basics", "./header", "./about", "./footer";
+@import "./variables", "./basics", "./header", "./about", "./keySkills",
+  "./footer";
