--- a/src/style/_basics.scss
+++ b/src/style/_basics.scss
@@ -13,6 +13,11 @@ li {
   font-family: "Poppins", "Montserrat", sans-serif;
 }
 
+h2 {
+  font-size: 35px;
+  margin: 15px 0;
+}
+
 h3 {
   font-size: 30px;
   margin: 15px 0;
@@ -25,6 +30,8 @@ h4 {
 section {
   width: 100%;
   position: relative;
-  margin: 20px 0;
-  padding: 0 15px;
+  padding: 20px 15px;
+  &:nth-child(odd) {
+    background-color: $bg-color;
+  }
 }
