--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -182,3 +182,28 @@ header {
     }
   }
 }
+
+.header_social_email_msg {
+  position: absolute;
+  top: 100%;
+  left: -100%;
+  // transform: translateX(-25%);
+  background-color: white;
+  color: black;
+  clip-path: polygon(
+    0 100%,
+    100% 100%,
+    100% 25%,
+    65% 24%,
+    35% 0,
+    32% 23%,
+    0 24%
+  );
+  width: 220px;
+  height: 60px;
+  display: grid;
+  place-items: center;
+  padding-top: 16px;
+  text-align: center;
+  background-color: lightyellow;
+}
