--- a/src/style/index.css
+++ b/src/style/index.css
@@ -16,12 +16,13 @@ li {
 
 h2 {
   font-size: 35px;
-  margin: 15px 0;
+  margin: 25px 0;
+  text-align: center;
 }
 
 h3 {
   font-size: 30px;
-  margin: 15px 0;
+  margin: 25px 0;
 }
 
 h4 {
@@ -31,7 +32,7 @@ h4 {
 section {
   width: 100%;
   position: relative;
-  padding: 20px 15px;
+  padding: 30px 15px;
 }
 
 section:nth-child(odd) {
@@ -309,7 +310,7 @@ header .header_text-container .header_social ul li a i {
 }
 
 .about .about_text_container {
-  max-width: 650px;
+  max-width: 700px;
   margin-top: 30px;
 }
 
@@ -344,7 +345,7 @@ header .header_text-container .header_social ul li a i {
 
 .key_skills .key_skills_text {
   margin: 0 auto;
-  max-width: 650px;
+  max-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -361,7 +362,7 @@ header .header_text-container .header_social ul li a i {
 }
 
 .key_skills .key_skills_cards {
-  max-width: 650px;
+  max-width: 700px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -399,6 +400,79 @@ header .header_text-container .header_social ul li a i {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.myWork {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project {
+  margin: 20px 0;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img {
+  position: relative;
+  overflow-y: hidden;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img:hover .project_links {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img img {
+  width: 100%;
+  margin: 15px 0;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img .project_links {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  background-color: rgba(90, 90, 90, 0.7);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-transition: 0.2s all ease-out;
+  transition: 0.2s all ease-out;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img .project_links .project_link {
+  border: 2px solid black;
+  border-radius: 20px;
+  margin: 0 30px;
+  -webkit-transition: 0.2s all ease-in;
+  transition: 0.2s all ease-in;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img .project_links .project_link:hover {
+  background-color: white;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .project_img .project_links .project_link i {
+  font-size: 30px;
+  color: black;
+  padding: 20px 50px;
+}
+
+.myWork .myWork_projects_wrapper .myWork_project .porject_content .project_technologies {
+  margin-top: 20px;
 }
 
 .footer {
