--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -17,7 +17,7 @@
       width: 165px;
       height: 65px;
       margin-top: 30px;
-      background-color: black;
+      background-color: $main-blue;
       font-size: 16px;
       color: white;
       font-weight: 500;
