--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -158,7 +158,7 @@ header {
             transform: translate(-50%, -55%);
             width: 0px;
             height: 0px;
-            background-color: black;
+            background-color: $main-blue;
             border-radius: 50%;
             z-index: -1;
             transition: 0.15s ease-in;
