--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -3,13 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  .about_image {
+  &_image {
     max-width: 600px;
     img {
       width: 100%;
     }
   }
-  .about_text_container {
+  &_text_container {
     max-width: $text-width;
     margin-top: 30px;
 
