--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -10,8 +10,8 @@ header {
   .header-bg {
     // content: "";
     position: absolute;
-    right: 0;
-    bottom: 0;
+    left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
     background: rgba(255, 255, 255, 0.6);
@@ -132,6 +132,7 @@ header {
     h1 {
       text-align: center;
       width: 100%;
+      color: whi;
     }
     .header_social {
       width: 100%;
