--- a/src/style/_keySkills.scss
+++ b/src/style/_keySkills.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  .key_skills_text {
+  &_text {
     margin: 0 auto;
     max-width: $text-width;
     display: flex;
@@ -11,7 +11,7 @@
     justify-content: center;
     align-items: center;
   }
-  .key_skills_cards {
+  &_cards {
     max-width: $text-width;
     display: flex;
     flex-direction: row;
