feat: add my work data

--- a/src/style/_footer.scss
+++ b/src/style/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   height: $nav-height;
-  background-color: black;
+  background-color: $main-blue;
   display: grid;
   place-items: center;
   p {
