feat: add formik and yup

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,2 +1,2 @@
 @import "./variables", "./basics", "./header", "./about", "./keySkills",
-  "./myWork", "./footer";
+  "./myWork", "./contact", "./footer";
