--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -24,6 +24,11 @@
       border-radius: 30px;
       border: none;
       cursor: pointer;
+      &:hover {
+        border: 2px solid $main-blue;
+        background-color: white;
+        color: $main-blue;
+      }
     }
   }
 }
