--- a/src/style/index.css
+++ b/src/style/index.css
@@ -330,6 +330,12 @@ header .header_text-container .header_social ul li a i {
   cursor: pointer;
 }
 
+.about_text_container .about_contact_btn:hover {
+  border: 2px solid #4169e1;
+  background-color: white;
+  color: #4169e1;
+}
+
 .key_skills {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -516,6 +522,95 @@ header .header_text-container .header_social ul li a i {
 .myWork_projects_wrapper .myWork_project .porject_content .project_technologies span {
   margin-right: 10px;
   color: #4169e1;
+}
+
+.contact_form {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contact_form label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  padding: 0 20px;
+  color: #4169e1;
+  font-size: 18px;
+  max-width: 400px;
+  margin: 20px 0;
+}
+
+.contact_form label input {
+  width: 100%;
+  padding: 10px;
+  background-color: lightgrey;
+}
+
+.contact_form label span {
+  width: 100%;
+  justify-self: flex-start;
+  padding-left: 10px;
+}
+
+.contact_form label textarea {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  height: 200px;
+  max-width: 400px;
+  background-color: lightgrey;
+  resize: none;
+}
+
+.contact_form .submit_button {
+  width: 165px;
+  height: 65px;
+  margin-top: 30px;
+  background-color: #4169e1;
+  font-size: 16px;
+  color: white;
+  font-weight: 500;
+  border-radius: 30px;
+  border: none;
+  cursor: pointer;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+.contact_form .submit_button:hover {
+  border: 2px solid #4169e1;
+  background-color: white;
+  color: #4169e1;
+}
+
+.errorMessage {
+  color: red;
+  font-weight: 300;
+  font-size: 16px;
 }
 
 .footer {
