feat: add emailjs to handle form

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -584,6 +584,7 @@ header .header_text-container .header_social ul li a i {
   max-width: 400px;
   background-color: lightgrey;
   resize: none;
+  padding: 10px;
 }
 
 .contact_form .submit_button {
