--- a/src/style/_contact.scss
+++ b/src/style/_contact.scss
@@ -35,6 +35,7 @@
         max-width: 400px;
         background-color: lightgrey;
         resize: none;
+        padding: 10px;
       }
     }
     .submit_button {
