--- a/src/style/_basics.scss
+++ b/src/style/_basics.scss
@@ -16,9 +16,26 @@ li {
 }
 
 h2 {
+  position: relative;
   font-size: 35px;
   margin: 30px 0;
   text-align: center;
+  z-index: 1;
+  color: white;
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 110%;
+    height: 110%;
+    background-color: $main-blue;
+    z-index: -1;
+    transform: translate(-5%, -5%);
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-top-left-radius: 10px;
+  }
 }
 
 h3 {
@@ -34,6 +51,10 @@ section {
   width: 100%;
   position: relative;
   padding: 30px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   &:nth-child(odd) {
     background-color: $bg-color;
   }
