--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -105,8 +105,9 @@ header {
       border-radius: 10px;
       border: 1px solid lightgray;
       transition: 0.25s all ease-in;
+      color: $main-blue;
       &:hover {
-        border: 1px solid black;
+        border: 1px solid $main-blue;
       }
     }
   }
