--- a/src/style/index.css
+++ b/src/style/index.css
@@ -17,9 +17,28 @@ li {
 }
 
 h2 {
+  position: relative;
   font-size: 35px;
   margin: 30px 0;
   text-align: center;
+  z-index: 1;
+  color: white;
+}
+
+h2::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 110%;
+  height: 110%;
+  background-color: #4169e1;
+  z-index: -1;
+  -webkit-transform: translate(-5%, -5%);
+          transform: translate(-5%, -5%);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 h3 {
@@ -35,6 +54,19 @@ section {
   width: 100%;
   position: relative;
   padding: 30px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 section:nth-child(odd) {
@@ -165,10 +197,11 @@ header nav .header_btn {
   border: 1px solid lightgray;
   -webkit-transition: 0.25s all ease-in;
   transition: 0.25s all ease-in;
+  color: #4169e1;
 }
 
 header nav .header_btn:hover {
-  border: 1px solid black;
+  border: 1px solid #4169e1;
 }
 
 header .header_text-container {
@@ -525,6 +558,7 @@ header .header_text-container .header_social ul li a i {
 }
 
 .contact_form {
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
   display: -webkit-box;
