--- a/src/style/_myWork.scss
+++ b/src/style/_myWork.scss
@@ -7,7 +7,11 @@
     .myWork_project {
       margin: 45px 0;
       border-bottom: 1.5px solid gray;
-
+      .project_title {
+        color: $main-blue;
+        font-size: 25px;
+        align-self: flex-start;
+      }
       .project_img {
         position: relative;
         overflow-y: hidden;
@@ -16,13 +20,8 @@
         justify-content: center;
         align-items: center;
 
-        .project_title {
-          color: $main-blue;
-          font-size: 25px;
-          align-self: flex-start;
-        }
         &:hover .project_links {
-          transform: translateY(0);
+          transform: translate(-50%, 0);
         }
         img {
           width: 100%;
@@ -32,11 +31,12 @@
         .project_links {
           display: block;
           position: absolute;
-          left: 0;
+          left: 50%;
           top: 0;
           width: 100%;
+          max-width: 600px;
           height: 100%;
-          transform: translateY(-105%);
+          transform: translate(-50%, -105%);
           background-color: rgba($color: #000000, $alpha: 0.8);
           display: flex;
           flex-direction: row;
