--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -24,6 +24,7 @@
       border-radius: 30px;
       border: none;
       cursor: pointer;
+      transition: 0.2s linear;
       &:hover {
         border: 2px solid $main-blue;
         background-color: white;
