--- a/src/style/_basics.scss
+++ b/src/style/_basics.scss
@@ -4,6 +4,7 @@ html {
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
 span,
