--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -25,22 +25,6 @@ header {
     background-color: transparent;
     z-index: 2;
 
-    // .header_line {
-    //   position: absolute;
-    //   left: 0;
-    //   top: 50%;
-    //   transform: translateY(-50%);
-    //   width: 80%;
-    //   height: 0.2rem;
-    //   background: rgb(2, 0, 36);
-    //   background: linear-gradient(
-    //     117deg,
-    //     rgba(2, 0, 36, 1) 0%,
-    //     rgba(230, 230, 230, 0) 100%,
-    //     rgba(0, 212, 255, 1) 100%
-    //   );
-    // }
-
     ul {
       position: fixed;
       right: -60%;
@@ -88,6 +72,12 @@ header {
           opacity: 1;
           right: 0;
         }
+
+        a {
+          width: 100%;
+          text-decoration: none;
+          color: black;
+        }
       }
     }
 
@@ -130,7 +120,27 @@ header {
     h1 {
       text-align: center;
       width: 100%;
-      color: whi;
+
+      span {
+        font-family: "Montserrat", sans-serif;
+        font-size: 35px;
+        position: relative;
+        color: white;
+        &::after {
+          content: "";
+          position: absolute;
+          left: 0;
+          top: 0;
+          width: 110%;
+          height: 110%;
+          background-color: $main-blue;
+          z-index: -1;
+          transform: translate(-5%, -5%);
+          border-top-right-radius: 10px;
+          border-bottom-right-radius: 10px;
+          border-top-left-radius: 10px;
+        }
+      }
     }
     .header_social {
       width: 100%;
