--- a/src/style/index.css
+++ b/src/style/index.css
@@ -5,6 +5,7 @@ html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Montserrat", "Poppins", sans-serif;
+  scroll-behavior: smooth;
 }
 
 span,
@@ -169,6 +170,12 @@ header nav ul li:hover::before {
   right: 0;
 }
 
+header nav ul li a {
+  width: 100%;
+  text-decoration: none;
+  color: black;
+}
+
 header nav .header_btn {
   width: 40px;
   height: 40px;
@@ -221,7 +228,29 @@ header .header_text-container span {
 header .header_text-container h1 {
   text-align: center;
   width: 100%;
-  color: whi;
+}
+
+header .header_text-container h1 span {
+  font-family: "Montserrat", sans-serif;
+  font-size: 35px;
+  position: relative;
+  color: white;
+}
+
+header .header_text-container h1 span::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 110%;
+  height: 110%;
+  background-color: #4169e1;
+  z-index: -1;
+  -webkit-transform: translate(-5%, -5%);
+          transform: translate(-5%, -5%);
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
 
 header .header_text-container .header_social {
@@ -350,6 +379,8 @@ header .header_text-container .header_social ul li a i {
   border-radius: 30px;
   border: none;
   cursor: pointer;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
 }
 
 .about_text_container .about_contact_btn:hover {
@@ -592,6 +623,7 @@ header .header_text-container .header_social ul li a i {
   width: 100%;
   padding: 10px;
   background-color: lightgrey;
+  border: 1px solid #4169e1;
 }
 
 .contact_form label span {
@@ -609,6 +641,7 @@ header .header_text-container .header_social ul li a i {
   background-color: lightgrey;
   resize: none;
   padding: 10px;
+  border: 1px solid #4169e1;
 }
 
 .contact_form .submit_button {
