--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -12,11 +12,14 @@
   &_text_container {
     max-width: $text-width;
     margin-top: 30px;
+    h3 {
+      color: $main-blue;
+    }
 
     .about_contact_btn {
       width: 165px;
       height: 65px;
-      margin-top: 30px;
+      margin: 30px 0 0 0;
       background-color: $main-blue;
       font-size: 16px;
       color: white;
@@ -25,6 +28,9 @@
       border: none;
       cursor: pointer;
       transition: 0.2s linear;
+      display: grid;
+      place-items: center;
+      text-decoration: none;
       &:hover {
         border: 2px solid $main-blue;
         background-color: white;
