--- a/src/style/_contact.scss
+++ b/src/style/_contact.scss
@@ -1,4 +1,16 @@
 .contact {
+  max-width: $text-width;
+  margin: 0 auto;
+  @media screen and (min-width: 1000px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    h2 {
+      margin: 0 300px;
+    }
+  }
   &_form {
     width: 100%;
     max-width: $text-width;
@@ -7,6 +19,10 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    @media screen and (min-width: 1000px) {
+      max-width: 50%;
+      margin: 0;
+    }
 
     label {
       display: flex;
@@ -22,7 +38,7 @@
       input {
         width: 100%;
         padding: 10px;
-        background-color: lightgrey;
+        background-color: $bg-color;
         border: 1px solid $main-blue;
       }
       span {
@@ -35,7 +51,7 @@
         width: 100%;
         height: 200px;
         max-width: 400px;
-        background-color: lightgrey;
+        background-color: $bg-color;
         resize: none;
         padding: 10px;
         border: 1px solid $main-blue;
@@ -62,6 +78,11 @@
   }
   &_social {
     width: 100%;
+    @media screen and (min-width: 1000px) {
+      width: 10%;
+      height: 100%;
+    }
+
     ul {
       display: flex;
       flex-direction: row;
@@ -71,7 +92,14 @@
       width: 100%;
       max-width: 500px;
       margin: 50px auto 0 auto;
-
+      border-top: 1px solid black;
+      @media screen and (min-width: 1000px) {
+        height: 100%;
+        border-left: 1px solid black;
+        border-top: none;
+        flex-direction: column;
+        margin: 0 50px;
+      }
       li {
         position: relative;
         list-style: none;
@@ -82,7 +110,8 @@
         display: grid;
         place-items: center;
         color: $main-blue;
-        margin: 0 20px;
+        margin: 5px 20px;
+
         &::before {
           position: absolute;
           content: "";
