--- a/src/style/_myWork.scss
+++ b/src/style/_myWork.scss
@@ -12,6 +12,13 @@
       align-items: center;
       justify-content: center;
 
+      @media screen and (min-width: 1000px) {
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+      }
+
       .project_title {
         color: $main-blue;
         font-size: 25px;
@@ -26,6 +33,10 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        @media screen and (min-width: 1000px) {
+          width: 60%;
+        }
 
         &:hover .project_links {
           transform: translate(-50%, 0);
@@ -76,6 +87,10 @@
       }
 
       .porject_content {
+        @media screen and (min-width: 1000px) {
+          width: 35%;
+          margin-left: 30px;
+        }
         .project_technologies {
           text-align: right;
           margin-top: 20px;
