--- a/src/style/index.css
+++ b/src/style/index.css
@@ -54,7 +54,7 @@ h4 {
 section {
   width: 100%;
   position: relative;
-  padding: 30px 15px;
+  padding: 40px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -512,8 +512,19 @@ header .header_text-container .header_social ul li a i {
   margin: 0 auto;
 }
 
+@media screen and (min-width: 1000px) {
+  .myWork_projects_wrapper .myWork_project:nth-child(even) .project_img {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .myWork_projects_wrapper .myWork_project:nth-child(even) .project_title {
+    text-align: right;
+  }
+}
+
 .myWork_projects_wrapper .myWork_project {
-  margin: 45px 0;
+  margin: 60px 0 40px 0;
   border-bottom: 1.5px solid gray;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -555,6 +566,12 @@ header .header_text-container .header_social ul li a i {
   text-align: left;
 }
 
+@media screen and (min-width: 1000px) {
+  .myWork_projects_wrapper .myWork_project .project_title {
+    margin: 0 100px;
+  }
+}
+
 .myWork_projects_wrapper .myWork_project .project_img {
   position: relative;
   overflow-y: hidden;
@@ -571,11 +588,12 @@ header .header_text-container .header_social ul li a i {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 1000px) {
   .myWork_projects_wrapper .myWork_project .project_img {
-    width: 60%;
+    width: 55%;
   }
 }
 
@@ -647,7 +665,10 @@ header .header_text-container .header_social ul li a i {
 @media screen and (min-width: 1000px) {
   .myWork_projects_wrapper .myWork_project .porject_content {
     width: 35%;
-    margin-left: 30px;
+    margin: 0 30px;
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
   }
 }
 
