--- a/src/style/_basics.scss
+++ b/src/style/_basics.scss
@@ -56,7 +56,7 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  &:nth-child(odd) {
+  &.bg {
     background-color: $bg-color;
   }
 }
