--- a/src/style/_about.scss
+++ b/src/style/_about.scss
@@ -12,6 +12,10 @@
   &_text_container {
     max-width: $text-width;
     margin-top: 30px;
+    &--name {
+      color: $main-blue;
+      font-size: 20px;
+    }
     h3 {
       color: $main-blue;
     }
