--- a/src/style/_basics.scss
+++ b/src/style/_basics.scss
@@ -7,6 +7,10 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 span,
 a,
 p,
@@ -19,7 +23,7 @@ li {
 h2 {
   position: relative;
   font-size: 35px;
-  margin: 30px 0;
+  margin: 35px 0;
   text-align: center;
   z-index: 1;
   color: white;
